creusot/tests/should_fail/logic_ghost_impl.stderr
Logic != Ghost
error[creusot]: Expected `f` to be a ghost function as specified by the trait declaration
  --> logic_ghost_impl.rs:11:5
   |
11 |     fn f() {
   |     ^^^^^^

error: aborting due to previous error

